--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,18 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:12-alpine
+        env:
+          POSTGRES_PASSWORD: secretforgithubaction
+          POSTGRES_DB: masterclass
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
     - uses: actions/checkout@v3
 
@@ -23,5 +35,8 @@ jobs:
         go-version: '1.20'
       id: go
 
+    - name: Run migration
+      run: make migrateup
+      
     - name: Test
       run: make test
