--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       id: go
 
     - name: Run migration
-      run: make migrateup
-      
+      run: make -f makefile.test migrateup
+
     - name: Test
-      run: make test
+      run: make -f makefile.test test
