fix: add exposed port to workflow container

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
     services:
       postgres:
         image: postgres:12-alpine
+        ports: 
+         - 5432:5432
         env:
           POSTGRES_PASSWORD: secretforgithubaction
           POSTGRES_DB: masterclass
